--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,23 +75,23 @@
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/about"><i class="fas fa-code"></i><b>&nbsp Events</b></a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html"><i class="fas fa-code"></i><b>&nbsp Events</b></a>
                 </li>
                 
                 <li class="nav-item">
-                <a class="nav-link" href="https://github.com/wowthemesnet/mediumish-theme-jekyll/archive/master.zip"><i class="fas fa-eye"></i><b>&nbsp IRIS</b></a>
+                <a class="nav-link" href="#"><i class="fas fa-eye"></i><b>&nbsp IRIS</b></a>
                 </li>
                 
                 <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-wordpress/"><i class="fab fas fa-rocket"></i><b>&nbsp VOYAGER</b></a>
+                <a target="_blank" class="nav-link" href="#"><i class="fab fas fa-rocket"></i><b>&nbsp VOYAGER</b></a>
                 </li>
                 
                 <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mediumish-ghost/"><i class="fas fa-info-circle"></i><b>&nbsp About Us</b></a>
+                <a target="_blank" class="nav-link" href="#"><i class="fas fa-info-circle"></i><b>&nbsp About Us</b></a>
                 </li>
 
                 <li class="nav-item">
-                <a target="_blank" class="nav-link" href="https://www.facebook.com/wowthemesnet/"><i class="far fa-user-circle"></i><b>&nbsp The Team</b></a>
+                <a target="_blank" class="nav-link" href="#"><i class="far fa-user-circle"></i><b>&nbsp The Team</b></a>
                 </li>
                 
                 
